--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -28,3 +28,11 @@
       filter: drop-shadow(0 0 1em #f40bc9dd);
     }
   }
+
+  .article-image {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 10px;
+    margin-bottom: 20px;
+  }
