--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -30,8 +30,8 @@
   }
 
   .article-image {
-    width: 100%;
-    height: 200px;
+    width: 600px;
+    height: 600px;
     object-fit: cover;
     border-radius: 10px;
     margin-bottom: 20px;
